--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "main": "index.js",
   "sideEffects": false,
   "scripts": {
-    "lint": "eslint $npm_package_config_eslint",
-    "lint:fix": "eslint --fix $npm_package_config_eslint",
-    "prettier": "prettier --write $npm_package_config_prettier",
-    "prettier:check": "prettier --list-different $npm_package_config_prettier",
-    "flow": "flow",
-    "flow:coverage": "for file in src/**.js test/**.js; do echo $file; flow coverage $file; done",
-    "clean": "rimraf demo-dist es lib $(cd src; ls) *.js.flow *.d.ts",
+    "prettier": "prettier --write",
+    "prettier:check": "prettier --list-different",
     "build": "npm run clean && babel src --out-dir es && flow-copy-source -v src/ es && copy src/**/*.d.ts es && cross-env BABEL_ENV=es5 babel src --out-dir . && flow-copy-source -v src/ . && copy src/**/*.d.ts .",
     "test": "cross-env NODE_ENV=test BABEL_ENV=es5 mocha $npm_package_config_mocha && cross-env NODE_ENV=test BABEL_ENV=coverage nyc --reporter=lcov --reporter=text mocha $npm_package_config_mocha",
     "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test mocha --watch $npm_package_config_mocha",
@@ -25,23 +20,6 @@
     "predeploy": "yarn build:demo",
     "deploy": "gh-pages -d demo-dist --dotfiles"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run lint && flow && tsc",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "npm test"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md,ts}": [
-      "prettier --write"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@jedwards1211/commitlint-config"
-    ]
-  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
@@ -50,10 +28,7 @@
   "config": {
     "mocha": "-r @babel/register -r jsdom-global/register test/configure.js 'test/**/*.js'",
     "eslint": "src test demo --cache",
-    "prettier": "*.{json,md,js} {src,test,demo}/**/*.{js,ts}",
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "prettier": "*.{json,md,js} {src,test,demo}/**/*.{js,ts}"
   },
   "nyc": {
     "include": [
@@ -87,7 +62,6 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.13",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
@@ -100,18 +74,11 @@
     "@babel/preset-flow": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@jedwards1211/commitlint-config": "^1.0.2",
-    "@jedwards1211/eslint-config": "^2.0.2",
-    "@jedwards1211/eslint-config-flow": "^3.0.0",
-    "@jedwards1211/eslint-config-react": "^4.0.0",
     "@types/classnames": "^2.2.9",
     "@types/prop-types": "^15.7.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.2.0",
@@ -119,14 +86,7 @@
     "copy": "^0.3.2",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-react": "^7.22.0",
-    "flow-bin": "^0.145.0",
-    "flow-copy-source": "https://github.com/jedwards1211/flow-copy-source#no-watch",
     "gh-pages": "^2.0.1",
-    "husky": "^4.3.8",
     "istanbul": "^0.4.5",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
@@ -134,12 +94,10 @@
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
     "raw-loader": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.7",
     "sinon": "^6.1.4",
     "typescript": "^4.1.3",
     "webpack": "^4.29.3",
